Små tilføjelser og rettelser.

--- a/eksamen/views/index.hbs
+++ b/eksamen/views/index.hbs
@@ -1,5 +1,6 @@
 <h1 id="mainHeading">Oversigt over <em>endpoints</em> i systemet</h1>
 <div id="mainContent">
+    <!-- Navigation -->
     <nav>
         <ul>
             <li><a href="konti">Tabel over alle registrerede konti i systemet (HTML View)</a></li>
