--- a/eksamen/views/konti.hbs
+++ b/eksamen/views/konti.hbs
@@ -12,6 +12,7 @@
         <th>Kodeord</th>
         <th>Håndter konto</th>
     </tr>
+    <!-- For-each-loop, der gennemløber objektet "konti" for diverse key/values -->
     {{#each konti}}
     <tr>
         <td>{{Uid}}</td>
@@ -32,6 +33,7 @@
     {{/each}}
 </table>
 <br>
+<!-- Navigation -->
 <nav>
     <ul>
         <li><a href="/">Gå til index-siden</a>.</li>
