PUT Request virker nu! Plus har formateret lidt på error.hbs

--- a/eksamen/views/error.hbs
+++ b/eksamen/views/error.hbs
@@ -1,3 +1,3 @@
-<h1>{{message}}</h1>
-<h2>{{error.status}}</h2>
+<h1>Der skete en fejl!</h1>
+<h2>{{message}} - {{error.status}}</h2>
 <pre>{{error.stack}}</pre>
