--- a/eksamen/views/index.hbs
+++ b/eksamen/views/index.hbs
@@ -1,4 +1,4 @@
-<h1 id="mainHeading">Oversigt over <em>endpoints</em> i systemet</h1>
+<h1 id="mainHeading">Oversigt over systemets funktionalitet</h1>
 <div id="mainContent">
     <!-- Navigation -->
     <nav>
