Dynamisk visning af data, pænere styling og formatering.

--- a/eksamen/public/stylesheets/style.css
+++ b/eksamen/public/stylesheets/style.css
@@ -7,7 +7,8 @@ body {
 table {
   border-collapse: collapse; /* Smelter sammen til én border */
   width: 100%;
-  box-shadow: 3px 3px 10px rgb(145, 145, 145);
+  background-color: rgb(247, 247, 247);
+  box-shadow: 2px 2px 6px rgb(184, 184, 184);
 }
 th, td {
   border: 1px solid rgb(0, 0, 0);
@@ -19,8 +20,7 @@ th {
   background-color: rgb(0, 0, 0);
 }
 td {
-  color: rgb(0, 0, 0);
-  background-color: rgb(238, 238, 238);
+  color: rgb(4, 78, 37);
 }
 a:link, a:visited {
   text-decoration: none;
@@ -45,16 +45,22 @@ form {
   padding: 8px;
   margin: 5px;
   min-width: 200px;
+  background-color: rgb(249, 253, 249);
+  border: 1px rgb(4, 78, 37) solid;
+  border-radius: 5px;
 }
 .submitBtn {
   padding: 15px;
-  min-width: 220px;
+  min-width: 225px;
   background-color: rgb(2, 29, 2);
   border: 0;
   border-radius: 7px;
   color: rgb(231, 241, 231);
   font-size: 16px;
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+.submitBtn:hover {
+  background-color: rgb(6, 56, 6);
 }
 .deleteBtn {
   padding: 10px;
@@ -65,6 +71,9 @@ form {
   font-size: 14px;
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+.deleteBtn:hover {
+  background-color: rgb(6, 56, 6);
+}
 #mainHeading {
   display: none;
 }
@@ -72,7 +81,30 @@ form {
   background-color: rgb(247, 247, 247);
   width: 650px;
   padding: 5px;
+  border: 1px rgb(4, 78, 37) solid;
   border-radius: 10px;
   box-shadow: 2px 2px 6px rgb(184, 184, 184);
   display: none;
+}
+.formDiv {
+  float: left;
+  padding: 10px;
+  margin: 10px;
+  background-color: rgb(247, 247, 247);
+  border: 1px rgb(4, 78, 37) solid;
+  border-radius: 10px;
+  box-shadow: 2px 2px 6px rgb(184, 184, 184);
+}
+#dynamicDataDiv {
+  float: left;
+  margin: 10px;
+  color: rgb(4, 78, 37);
+  margin-left: 25px;
+  background-color: rgb(247, 247, 247);
+  width: 300px;
+  padding: 10px;
+  padding-left: 20px;
+  border: 1px rgb(4, 78, 37) solid;
+  border-radius: 10px;
+  box-shadow: 2px 2px 6px rgb(184, 184, 184);
 }
