--- a/eksamen/views/layout.hbs
+++ b/eksamen/views/layout.hbs
@@ -15,6 +15,6 @@
 <body>
   {{{body}}}
   <!-- Custom JavaScript -->
-  <script src="/javascripts/script.js"></script>
+  <script src="/javascripts/CookieScript.js"></script>
 </body>
 </html>
